Починил загрузку ассетов, добавлена оптимизация
запуск Vanilla версий работает